# raytracer

./: CMakeLists.txt  README.md
lib/misc/: color.cc  color.hh  list-to-word.cc  list-to-word.hh  vector3.cc  vector3.hh
src/: main.cc
src/output/: ppm.cc  ppm.hh
src/parser/: ambient-light.cc  ambient-light.hh  camera.cc  camera.hh  direction-light.cc  direction-light.hh  light.cc  light.hh  object.cc  object.hh  parser.cc  parser.hh  point-light.cc  point-light.hh  vertice.cc  vertice.hh
src/trace/: intersection.cc  intersection.hh  obj_tracing.cc  obj_tracing.hh  outgoing_screen.cc  outgoing_screen.hh  ray.cc  ray.hh  triangle.cc  triangle.hh
